// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatList snapshot tests should render Chats 1`] = `
<Fragment>
  <Chat
    chat={
      Object {
        "id": 1,
      }
    }
    key="1"
  />
  <Chat
    chat={
      Object {
        "id": 2,
      }
    }
    key="2"
  />
  <Chat
    chat={
      Object {
        "id": 3,
      }
    }
    key="3"
  />
  <Chat
    chat={
      Object {
        "id": 4,
      }
    }
    key="4"
  />
</Fragment>
`;

exports[`ChatList snapshot tests should render Chats and more button when lastPage is false 1`] = `
<Fragment>
  <Chat
    chat={
      Object {
        "id": 1,
      }
    }
    key="1"
  />
  <Chat
    chat={
      Object {
        "id": 2,
      }
    }
    key="2"
  />
  <Chat
    chat={
      Object {
        "id": 3,
      }
    }
    key="3"
  />
  <Chat
    chat={
      Object {
        "id": 4,
      }
    }
    key="4"
  />
  <styled.span
    data-testid="more"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f141",
            "M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z",
          ],
          "iconName": "ellipsis-h",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
  </styled.span>
</Fragment>
`;

exports[`ChatList snapshot tests should render LoadingIndicator when loading 1`] = `
<Fragment>
  <styled.div>
    <LoadingIndicator />
  </styled.div>
</Fragment>
`;

exports[`ChatList snapshot tests should render info when empty chats array and not loading  1`] = `
<Fragment>
  <styled.div
    data-testid="info"
  >
    <styled.span>
      You don't have any chats.
    </styled.span>
  </styled.div>
</Fragment>
`;
